--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,10 @@
 {% block main %}
     <div class="login">
         <div class="loginForm">
-            <img src="../static/images/HenriqueNoBackground.png">
+            <img class="logo" src="../static/images/HenriqueNoBackground.png">
+            <br>
             <h2>Login</h2>
+            <br>
             <form action="/login" method="post">
                 <div class="mb-3">
                     <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
@@ -18,6 +20,7 @@
                 </div>
                 <button class="btn btn-primary" type="submit">LogIn</button>
             </form>
+            <br>
             <a href="/register">Not register?</a>
         </div>
     </div>
