--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
 {% block main %}
     <div class="login">
         <div class="loginForm">
-            <img src="../static/images/HenriqueNoBackground.png">
+            <img class="logo" src="../static/images/HenriqueNoBackground.png">
             <h2>Register</h2>
             <form action="/register" method="post">
                 <div class="mb-3">
@@ -21,7 +21,7 @@
                 </div>
                 <button class="btn btn-primary" type="submit">Register</button>
             </form>
-            <a href="/register">Already register?</a>
+            <a href="/login">Already register?</a>
         </div>
     </div>
 {% endblock %}
