--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,6 @@
 * {
     font-family: 'Roboto', sans-serif;
-    margin: 0;
-}
-
-body {
-    background-color: #201b2c;
+    box-sizing: border-box;
 }
 
 .loginForm {
@@ -15,15 +11,18 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20%;
     text-align: center;
+    user-select: none;
 }
 
 .login {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     background-image: url(https://i.pinimg.com/originals/33/1e/31/331e31d369af02328c60b02a4532b24e.png);
     width: 1140px;
     height: 650px;
+
 }
 
 .logo {
@@ -31,82 +30,19 @@ body {
     margin: 20px;
 }
 
-header {
-    display: inline;
-}
-
-body {
-    margin: 0;
-    line-height: normal;
-}
-
-.rectangle-div,
-.rectangle-div1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 20px;
-    background-color: #564875;
-    width: 218px;
-    height: 374px;
-}
-
-.rectangle-div1 {
-    top: 34px;
-    width: 448px;
-    height: 340px;
-}
-
-.atual-div,
-.group-div {
-    position: absolute;
-    top: 0;
-    left: 470px;
-    width: 448px;
-    height: 374px;
-    float: right;
-}
-
-.atual-div {
-    left: 38px;
-    display: inline-block;
-    width: 134px;
-    height: 34px;
-}
-
-.group-div1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 448px;
-    height: 374px;
-    float: left;
-}
-
-.group-main {
-    position: relative;
-    top: 200px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 187px;
-    font-size: 15px;
-    color: #fff;
-    font-family: Inter;
-}
-
 .logoIn {
     width: 150px;
     margin: 25px;
     float: left;
+    margin-right: 500px;
 }
 
 .hello {
     color: #FFFFFF;
     float: right;
     width: 150px;
-    margin: 32px;
+    margin: 25px;
+    margin-bottom: 4px;
 }
 
 .logout {
@@ -115,4 +51,215 @@ body {
     float: right;
     width: 150px;
     margin-top: 37px;
+}
+
+.itens {
+    margin-top: 150px;
+    margin-left: 20px;
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #564875;
+    margin: 0px 20px 20px 0px;
+    border-radius: 20px;
+    float: left;
+    height: 250px;
+    transition: 0.2s;
+}
+
+.card a{
+    background-color: #ba687f;
+    transition: 0.2s;
+}
+
+.card a:hover {
+    box-shadow: 5px 5px 5px #000000;
+}
+
+.card:hover {
+    box-shadow: 5px 5px 5px #000000;
+}
+
+.esquerda {
+    float: left;
+    width: 58%;
+    padding: 20px 0px 20px 33px;
+    margin: 20px 40px 20px 45px;
+    border-radius: 20px;
+    background-color: #7c6ea7;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.direita {
+    margin: 20px 40px 20px 25px;
+    padding: 15px;
+    float: left;
+    width: 28%;
+    border-radius: 20px;
+    background-color: #7c6ea7;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+main {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#more {
+    display: none;
+}
+
+#seeMore {
+    cursor: pointer;
+}
+
+.ContatoImg {
+    text-align: center;
+    float: left;
+    border-radius: 50%;
+    width: 75px;
+    padding: 5px;
+    cursor: pointer;
+    background-color: #564875;
+    margin: 10px;
+}
+
+.ContatoImg:hover {
+    opacity: 0.5;
+}
+
+#RedesSociais a {
+    background-color: #564875;
+    color: #564875;
+}
+
+.mediaImg {
+    display: inline-block;
+}
+
+body {
+    background-color: #201b2c;
+    color: #FFF;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0;
+    text-align: left;
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+    width: 90%;
+}
+
+.header {
+    background-color: #477bff;
+    color: #fff;
+    margin-bottom: 2rem;
+    padding: 2rem 1rem;
+    text-align: center;
+}
+
+.section {
+    padding-bottom: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 0.5rem;
+}
+
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 48px;
+}
+
+button, input[type="submit"] {
+    background-color: #d9edff;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    font-size: 0.95rem;
+    font-weight: 400;
+    line-height: 1.5;
+    padding: 0.375rem 0.75rem;
+    text-align: center;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    vertical-align: middle;
+}
+
+input[type="text"], input[type="number"] {
+    line-height: 1.8;
+    width: 25%;
+}
+
+input[type="text"]:hover, input[type="number"]:hover {
+    background-color: #F2F2F2;
+    transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
+}
+
+table {
+    background-color: transparent;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+table th,
+table td {
+    padding: 0.75rem;
+    vertical-align: middle;
+}
+
+tbody tr:nth-of-type(odd) {
+    background-color: rgb(179, 208, 255, 0.3)
+}
+
+#atualizacoes {
+    position: absolute;
+    top: 1300px;
+}
+
+@media screen and (max-width: 1080px) {
+
+    * {
+        font-size: 3vw;
+    }
+    .esquerda {
+        width: 100%;
+        padding: 20px 0px 20px 33px;
+        margin: 20px 20px 20px 20px;
+    }
+
+    .direita {
+        width: 100%;
+    }
+
+    .logoIn {
+        width: 150px;
+        margin: 20px;
+        float: left;
+    }
+
+    .hello {
+        color: #FFFFFF;
+        float: right;
+        width: 150px;
+        margin: 25px;
+    }
+
+    .logout {
+        text-decoration: none;
+        color: #FFFFFF;
+        float: right;
+    }
 }
