--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,5 +13,6 @@
     </head>
     <body>
             {% block main %}{% endblock %}
+            <script src="../static/script.js"></script>
     </body>
 </html>
